# cli-recorder

./: Cargo.toml  LICENSE  README.md
src/: main.rs
