[package]
name = "cli-recorder"
version = "0.1.0"
edition = "2021"
authors = ["Youngho Cho <dominoyh5@gmail.com>"]
license = "MIT"
repository = "https://github.com/cho0h5/cli-recorder"

[dependencies]
cpal = "0.15"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
termion = "3"
anyhow = "1"
lame = "0.1.3"
hound = "3.5.1"
